--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -7,6 +7,7 @@
     <title>Do List</title>
     <meta name="description" content="Do List">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 
 <body class="view-login">
