made the drawer responsive

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Do List">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <style>body { margin: 0 }</style>
 </head>
 
 <body class="view-login">
